--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,11 @@ h1 {
 }
 nav {
     text-align: center;
+    width: 500px;
+    margin: auto;
+}
+nav a {
+  color: black;
+  display: flex;
+  margin: 10px;
 }
