--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -1,4 +1,5 @@
 /*Общая настройка фона*/
+
 html {
   width: 100%;
   height: 100%;
@@ -9,25 +10,28 @@ body {
   width: 1060px;
   height: 100%;
   background-color: #fff;
-  -webkit-box-shadow: 0 0 5px 0 rgba(0,0,0,0.3);
-     -moz-box-shadow: 0 0 5px 0 rgba(0,0,0,0.3);
-          box-shadow: 0 0 5px 0 rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+     -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   font-family: 'Open Sans', sans-serif;
 }
 
 /*Универсальные классы*/
+
 .margin {
   margin-left: 47px;
   margin-right: 47px;
 }
 
 /*Свойства логотипа*/
+
 .logo {
   margin-top: 50px;
   margin-bottom: 40px;
 }
 
 /*Свойства главного меню*/
+
 .main-menu {
   height: 40px;
   margin-bottom: 40px;
@@ -66,6 +70,7 @@ body {
 }
 
 /*Свойства боковой панели*/
+
 .sidebar {
   display: inline-block;
   vertical-align: top;
@@ -94,6 +99,7 @@ body {
 }
 
 /*Свойства основного контента*/
+
 .bicycle {
   display: inline-block;
 }
@@ -116,12 +122,13 @@ body {
 }
 
 /*Свойства футера*/
+
 .links {
   height: 40px;
   vertical-align: middle;
   background-color: #e1e1e1;
 }
-.links a{
+.links a {
   padding: 13px 43px;
   line-height: 40px;
   text-decoration: none;
@@ -133,7 +140,7 @@ body {
 .links a:hover {
   text-decoration: underline;
 }
-.copy{
+.copy {
   float: right;
   margin-right: 25px;
   line-height: 40px;
