Final version HW3

--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -113,6 +113,9 @@ body {
 .bicycle p {
   width: 625px;
   margin: 40px auto;
+  font-size: 13.33px;
+  line-height: 22px;
+  text-indent: 5px;
   color: #2c2c2c;
 }
 
@@ -128,6 +131,7 @@ body {
   line-height: 40px;
   text-decoration: none;
   color: #2c2c2c;
+  font-size: 13.33px;
 }
 .links a:first-child {
   padding: 13px 43px 13px 25px;
@@ -140,4 +144,24 @@ body {
   margin-right: 25px;
   line-height: 40px;
   color: #2c2c2c;
+  font-size: 13.33px;
+}
+
+
+
+
+
+
+
+..Lorem_Ipsum___це_текст__риба___що_використовуєт {
+  font-size: 13.333px;
+  font-family: "OpenSans";
+  color: rgb(44, 44, 44);
+  line-height: 1.6;
+  position: absolute;
+  left: 487.964px;
+  top: 669.11px;
+  width: 625px;
+  height: 141px;
+  z-index: 12;
 }
