--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -152,3 +152,22 @@ body {
   color: #2c2c2c;
   font-size: 13.33px;
 }
+
+
+
+
+
+
+
+..Lorem_Ipsum___це_текст__риба___що_використовуєт {
+  font-size: 13.333px;
+  font-family: "OpenSans";
+  color: rgb(44, 44, 44);
+  line-height: 1.6;
+  position: absolute;
+  left: 487.964px;
+  top: 669.11px;
+  width: 625px;
+  height: 141px;
+  z-index: 12;
+}
