--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -3,6 +3,8 @@
 html {
   width: 100%;
   height: 100%;
+  background-image: url(../img/background.png);
+  background-repeat: repeat-x;
   background-color: #0c739f;
 }
 body {
@@ -15,10 +17,21 @@ body {
   font-family: Tahoma, Verdana, sans-serif;
 }
 /*Свойства хеадера*/
-
+.header-t {
+  position: relative;
+  height: 175px;
+}
 .logo {
-  margin-top: 50px;
-  margin-bottom: 40px;
+  position: absolute;
+  bottom: 0;
+  margin-left: 28px;
+}
+.header-bm {
+  height: 237px;
+}
+.header-bm img {
+  border-top: 1px solid #128aa7;
+  border-bottom: 1px solid #128aa7;
 }
 
 /*Свойства главного меню*/
@@ -39,84 +52,13 @@ body {
   display: block;
   padding: 7px 0;
   color: #fff;
-
   text-decoration: none;
-}
-
-/*Свойства боковой панели*/
-
-.sidebar {
-  display: inline-block;
-  vertical-align: top;
-}
-.sidebar ul {
-  width: 240px;
-  margin-right: 48px;
-}
-.sidebar-item {
-  display: block;
-  padding: 13px 43px 13px 25px;
-  color: #656363;
-  font-size: 13px;
-  text-decoration: none;
-  border-right: 1px solid #c8c8c8;
-  border-bottom: 1px solid #c8c8c8;
-  border-left: 1px solid #c8c8c8;
-}
-.sidebar li:first-child {
-  border-top: 1px solid #c8c8c8;
-}
-.sidebar-item:hover {
-  padding-left: 35px;
-  color: #2c2c2c;
-  background-color: #f9f9f9;
 }
 
 /*Свойства основного контента*/
 
-.bicycle {
-  display: inline-block;
-}
-.frame {
-  position: relative;
-  height: 398px;
-  width: 671px;
-  border: 1px solid #c8c8c8;
-}
-.frame img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.bicycle p {
-  width: 625px;
-  margin: 35px auto 45px;
-  font-size: 13.33px;
-  line-height: 23px;
-  color: #2c2c2c;
-}
-
 /*Свойства футера*/
 
-.links {
-  height: 40px;
-  vertical-align: middle;
-  background-color: #e1e1e1;
-}
-.links a {
-  padding: 13px 43px;
-  line-height: 40px;
-  text-decoration: none;
-  color: #2c2c2c;
-  font-size: 13.33px;
-}
-.links a:first-child {
-  padding: 13px 43px 13px 25px;
-}
-.links a:hover {
-  text-decoration: underline;
-}
 .copy {
   width: 200px;
   margin: 8px auto;
