--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -39,9 +39,13 @@ body {
 /*Свойства главного меню*/
 
 .main-menu {
+  padding: 0 25px;
   border-top: 1px solid #cacbcb;
   border-bottom: 1px solid #000;
   background-color: #343434;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
+     -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
+          box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
   font-size: 0;
 }
 .main-menu li {
