--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -1,26 +1,25 @@
 /*Общая настройка фона*/
-
-html {
+body {
   width: 100%;
   background-image: url(../img/background.png);
   background-repeat: repeat-x;
   background-color: #0c739f;
+  font-family: Tahoma, Verdana, sans-serif;
 }
-body {
+.wrapper {
   margin: 0 auto;
   width: 1000px;
-  background-color: #fff;
   -webkit-box-shadow: 0 0 10px 1px rgba(0,0,0,.7);
      -moz-box-shadow: 0 0 10px 1px rgba(0,0,0,.7);
           box-shadow: 0 0 10px 1px rgba(0,0,0,.7);
-  font-family: Tahoma, Verdana, sans-serif;
 }
 
-/*Свойства хеадера*/
+/*Свойства заголовка*/
 
 .header-t {
   position: relative;
   height: 175px;
+  background-color: #fff;
 }
 .logo {
   position: absolute;
@@ -68,21 +67,24 @@ body {
 
 .content {
   height: 546px;
+  background-color: #fff;
   color: #424c43;
 }
-.section-name {  
+.section-name {
   font-size: 18;
   font-weight: bold;
   text-align: center;
 }
 
-/*Свойства футера*/
+/*Свойства подвала*/
 
 .copy {
-  width: 100%;
-  color: #fff;
+  width: 1000px;
+  margin: 0 auto;
   font-size: 12px;
+  color: #fff;
 }
 .copy p {
-  margin: 0 auto;
+  line-height: 34px;
+  text-align: center;
 }
