--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -19,6 +19,7 @@ body {
 .header-t {
   position: relative;
   height: 175px;
+  color: #128aa7;
   background-color: #fff;
 }
 .logo {
@@ -26,6 +27,25 @@ body {
   bottom: 0;
   margin-left: 28px;
 }
+.flags {
+  position: absolute;
+  right: 28px;
+  bottom: 10px;
+  font-size: 0;
+}
+.flags li {  
+  display: inline-block;
+  text-align: center;
+}
+.flags img {
+  padding-right: 16px;
+}
+.flags a {
+  color: #128aa7;
+  font-size: 10px;
+  text-align: center;
+}
+
 .header-bm {
   height: 237px;
 }
