--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -34,7 +34,6 @@ body {
   color: #128aa7;
   font-size: 12px;
   text-decoration: none;
-  /*font-weight: bold;*/
 }
 .contacts {
   position: absolute;
@@ -66,7 +65,6 @@ body {
   font-size: 10px;
   text-align: center;
 }
-
 .header-bm {
   height: 237px;
 }
@@ -78,22 +76,25 @@ body {
 /*Свойства главного меню*/
 
 .main-menu {
+  z-index: 11;
   padding: 0 25px;
   border-top: 1px solid #cacbcb;
   border-bottom: 1px solid #000;
   background-color: #343434;
+  font-size: 0;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
      -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
           box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
-  font-size: 0;
 }
 .main-menu li {
+  position: relative;
   display: inline-block;
   width: 14.28%;
   font-size: 14px;
   text-align: center;
 }
-.m-menu-item {
+/*.m-menu-item */
+.main-menu li a {
   display: block;
   padding: 7px 0;
   color: #fff;
@@ -102,6 +103,33 @@ body {
 .arrow {
   height: 6px;
   margin-left: 8px;
+}
+.submenu {
+  display: none;
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+  background-color: #343434;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
+     -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
+          box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
+}
+.submenu li {
+  display: block;
+  width: 100%;
+}
+.submenu li a {
+  padding: 10px;
+  color: #fff;
+  text-align: left;
+  text-decoration: none;
+}
+.submenu li:last-child {
+  padding-bottom: 10px;
+}
+.main-menu li:hover .submenu {
+    display: block;
+    z-index: 500;
 }
 
 /*Свойства основного контента*/
