--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -1,12 +1,10 @@
 /*Общая настройка фона*/
 
 html {
-  width: 100%;
-  height: 100%;
   background-color: #f9f9f9;
 }
 body {
-  margin: auto;
+  margin: 0 auto;
   width: 1060px;
   height: 100%;
   background-color: #fff;
@@ -129,6 +127,7 @@ body {
 
 .links {
   height: 40px;
+  margin-bottom: 60px;
   vertical-align: middle;
   background-color: #e1e1e1;
 }
