--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -76,7 +76,8 @@ body {
 /*Свойства главного меню*/
 
 .main-menu {
-  z-index: 11;
+  position: relative;
+  z-index: 10;
   padding: 0 25px;
   border-top: 1px solid #cacbcb;
   border-bottom: 1px solid #000;
@@ -88,6 +89,7 @@ body {
 }
 .main-menu li {
   position: relative;
+  z-index: 11;
   display: inline-block;
   width: 14.28%;
   font-size: 14px;
@@ -108,7 +110,7 @@ body {
   display: none;
   position: absolute;
   width: 100%;
-  z-index: 10;
+  z-index: 12;
   background-color: #343434;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
      -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
@@ -129,7 +131,6 @@ body {
 }
 .main-menu li:hover .submenu {
     display: block;
-    z-index: 500;
 }
 
 /*Свойства основного контента*/
