--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -75,9 +75,8 @@ body {
 
 /*Свойства главного меню*/
 
-.main-menu {
+.menu {
   position: relative;
-  z-index: 10;
   padding: 0 25px;
   border-top: 1px solid #cacbcb;
   border-bottom: 1px solid #000;
@@ -87,7 +86,7 @@ body {
      -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
           box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
 }
-.main-menu li {
+.menu li {
   position: relative;
   z-index: 11;
   display: inline-block;
@@ -96,7 +95,7 @@ body {
   text-align: center;
 }
 /*.m-menu-item */
-.main-menu li a {
+.menu li a {
   display: block;
   padding: 7px 0;
   color: #fff;
@@ -129,7 +128,7 @@ body {
 .submenu li:last-child {
   padding-bottom: 10px;
 }
-.main-menu li:hover .submenu {
+.menu li:hover .submenu {
     display: block;
 }
 
