--- a/module_4/css/style.css
+++ b/module_4/css/style.css
@@ -1,4 +1,5 @@
 /*Общая настройка фона*/
+
 body {
   width: 100%;
   background-image: url(../img/background.png);
@@ -134,14 +135,50 @@ body {
 /*Свойства основного контента*/
 
 .content {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
   height: 546px;
+  width: 100%;
   background-color: #fff;
   color: #424c43;
+  font-size: 0;
+  overflow: hidden;
+}
+.info,
+.the-hole,
+.news {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 14px;
+}
+.info,
+.the-hole,
+.news {
+  display: inline-block;
+  vertical-align: top;
+  height: 100%;
+}
+.info,
+.news {
+  width: 21%;
+  border-left: 1px solid #c7cacf;
+  border-right: 1px solid #c7cacf;
+  background-color: #edeef0;
+}
+.the-hole{
+  width: 58%;
 }
 .section-name {
-  font-size: 18;
+  margin: 12px;
+  font-size: 18px;
   font-weight: bold;
   text-align: center;
+}
+.info p,
+.news p {
+  margin: 10px 15px;
 }
 
 /*Свойства подвала*/
