--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -1,9 +1,9 @@
 /*Общая настройка фона*/
-
-html {
-  background-color: #f9f9f9;
-}
 body {
+  background-color: #f9f9f9;
+  font-family: 'Open Sans', sans-serif;
+}
+.wrapper {
   margin: 0 auto;
   width: 1060px;
   height: 100%;
@@ -13,7 +13,6 @@ body {
           box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   font-family: 'Open Sans', sans-serif;
 }
-
 /*Универсальные классы*/
 
 .margin {
