--- a/module_4_css/css/style.css
+++ b/module_4_css/css/style.css
@@ -101,10 +101,8 @@ body {
   color: #fff;
   text-decoration: none;
 }
-.arrow {
-  height: 6px;
-  margin-left: 8px;
-}
+.arrow-down 
+
 .submenu {
   display: none;
   position: absolute;
