--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -1,10 +1,11 @@
 /*Общая настройка фона*/
+
 body {
   background-color: #f9f9f9;
   font-family: 'Open Sans', sans-serif;
 }
 .wrapper {
-  margin: 0 auto;
+  margin: auto;;
   width: 1060px;
   height: 100%;
   background-color: #fff;
@@ -13,6 +14,7 @@ body {
           box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   font-family: 'Open Sans', sans-serif;
 }
+
 /*Универсальные классы*/
 
 .margin {
