--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -1,11 +1,15 @@
 /*Общая настройка фона*/
 
+html {
+  height: 100%;
+}
 body {
+  height: 100%;
   background-color: #f9f9f9;
   font-family: 'Open Sans', sans-serif;
 }
 .wrapper {
-  margin: auto;;
+  margin: auto;
   width: 1060px;
   height: 100%;
   background-color: #fff;
