--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 .wrapper {
-  margin: auto;
+  margin: 0 auto;
   width: 1060px;
   height: 100%;
   background-color: #fff;
