--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -1,17 +1,13 @@
 /*Общая настройка фона*/
 
-html {
-  height: 100%;
-}
 body {
-  height: 100%;
   background-color: #f9f9f9;
   font-family: 'Open Sans', sans-serif;
 }
 .wrapper {
   margin: 0 auto;
   width: 1060px;
-  height: 100%;
+  height: 100vh;
   background-color: #fff;
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
      -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
