--- a/module_4_css/css/style.css
+++ b/module_4_css/css/style.css
@@ -101,8 +101,28 @@ body {
   color: #fff;
   text-decoration: none;
 }
-.arrow-down 
-
+.menu li a::after {
+  content: "  ";
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #960302;
+}
+/*.arrow-down::after {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #960302;*/
+}
+.arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #960302;
+}
 .submenu {
   display: none;
   position: absolute;
