--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -128,7 +128,7 @@ body {
 
 .links {
   height: 40px;
-  margin-bottom: 60px;
+  /*margin-bottom: 60px;*/
   vertical-align: middle;
   background-color: #e1e1e1;
 }
