--- a/module_3/css/style.css
+++ b/module_3/css/style.css
@@ -7,7 +7,7 @@ body {
 .wrapper {
   margin: 0 auto;
   width: 1060px;
-  padding-bottom: 60px;
+  padding-bottom: 50px;
   background-color: #fff;
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
      -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
@@ -128,7 +128,7 @@ body {
 
 .links {
   height: 40px;
-  /*margin-bottom: 60px;*/
+  margin-bottom: 10px;
   vertical-align: middle;
   background-color: #e1e1e1;
 }
