--- a/module_3-bonus/style.css
+++ b/module_3-bonus/style.css
@@ -4,3 +4,12 @@ header nav {
 p .left-spacing {
   color: red;
 }
+ul.menu > li {
+
+ul.menu > li > a {
+
+ul.submenu {
+
+ul.submenu > li {
+
+ul.menu > li:hover > ul.submenu {
