--- a/goitfe5homeworks/html/module_4_css/css/style.css
+++ b/goitfe5homeworks/html/module_4_css/css/style.css
@@ -102,6 +102,8 @@ body {
   text-decoration: none;
 }
 
+/*Свойства подмаеню*/
+
 .submenu {
   display: none;
   position: absolute;
@@ -129,7 +131,7 @@ body {
     display: block;
 }
 
-/*Стрелка выпадающего меню*/
+/*Стрелка справа от выпадающего меню*/
 
 .arrow-down::after {
   content: "";
