--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,15 @@ header,
   margin: 0;
 }
 .task li {
-  padding: 10px 10px;
+  padding: 0 10px;
   list-style: none;
 }
 .task a {
   color: black;
   text-decoration: none;
+}
+.task a:hover {
+  font-weight: bold;
+  color: white;
+  text-shadow: 0px 1px 5px rgba(122, 122, 122, 1);
 }
