--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   background-image: -o-linear-gradient(left bottom, #144999 0%, #70FF91 100%);
   background-image: linear-gradient(to left bottom, #144999 0%, #70FF91 100%);
   font-family: "Myriad Pro", Arial, sans-serif;
-  height: 100vh;
+  background-repeat: no-repeat;
 }
 .homework {
   width: 960px;
