--- a/goitfe5homeworks/html/module_4_css/css/style.css
+++ b/goitfe5homeworks/html/module_4_css/css/style.css
@@ -21,6 +21,7 @@ body {
   height: 175px;
   color: #128aa7;
   background-color: #fff;
+  font-size: 12px;
 }
 .logo {
   position: absolute;
@@ -32,14 +33,12 @@ body {
   bottom: 55px;
   margin-left: 100px;
   color: #128aa7;
-  font-size: 12px;
   text-decoration: none;
 }
 .contacts {
   position: absolute;
   right: 33px;
   top: 10px;
-  font-size: 12px;
   line-height: 17px;
 }
 .contacts-h {
@@ -66,21 +65,24 @@ body {
   text-align: center;
 }
 .header-bm {
-  height: 237px;
-}
-.header-bm img {
+  padding-top: 1px;
+  padding-bottom: 1px;
   border-top: 1px solid #128aa7;
   border-bottom: 1px solid #128aa7;
+  background-color: #128aa7;
+}
+.header-bm img {
+  height: 237px;
 }
 
 /*Свойства главного меню*/
 
 .menu {
-  position: relative;
-  padding: 0 25px;
+  height: 30px;
   border-top: 1px solid #cacbcb;
   border-bottom: 1px solid #000;
   background-color: #343434;
+  text-align: center;
   font-size: 0;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
      -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
@@ -88,16 +90,12 @@ body {
 }
 .menu li {
   position: relative;
-  z-index: 10;
   display: inline-block;
-  width: 14.28%;
   font-size: 14px;
-  text-align: center;
 }
 .menu li a {
-  z-index: 15;
   display: block;
-  padding: 7px 0;
+  padding: 7px 31px;
   color: #fff;
   text-decoration: none;
 }
@@ -107,8 +105,7 @@ body {
 .submenu {
   display: none;
   position: absolute;
-  width: 100%;
-  z-index: 5;
+  width: 150px;
   background-color: #343434;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
      -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
