--- a/goitfe5homeworks/html/module_4_css_1/css/style.css
+++ b/goitfe5homeworks/html/module_4_css_1/css/style.css
@@ -9,9 +9,7 @@ body {
 .wrapper {
   margin: 0 auto;
   width: 1000px;
-  -webkit-box-shadow: 0 0 10px 1px rgba(0,0,0,.7);
-     -moz-box-shadow: 0 0 10px 1px rgba(0,0,0,.7);
-          box-shadow: 0 0 10px 1px rgba(0,0,0,.7);
+  box-shadow: 0 0 10px 1px rgba(0,0,0,.7);
 }
 
 /*Свойства заголовка*/
@@ -81,9 +79,7 @@ body {
   background-color: #343434;
   text-align: center;
   font-size: 0;
-  -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
-     -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
-          box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
 }
 .menu li {
   position: relative;
@@ -105,17 +101,15 @@ body {
   top: 31px;
   left: 20px;
   width: 150px;
-  padding-bottom: 12px;
+  padding-bottom: 10px;
   background-color: #343434;
-  -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
-     -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
-          box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
 }
 .submenu li {
   display: block;
 }
 .submenu li a {
-  padding: 10px;
+  padding: 5px 10px;
   color: #fff;
   text-align: left;
   text-decoration: none;
@@ -151,25 +145,30 @@ body {
 .news {
   display: inline-block;
   vertical-align: top;
-  height: 100%;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px 10px 0;
   font-size: 14px;
 }
 .info,
 .news {
   width: 21%;
 }
-.the-hole{
+.the-hole {
   width: 58%;
 }
 .section-name {
-  margin: 12px;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
+  margin-bottom: .6em;
 }
 .info p,
-.news p {
-  margin: 10px 15px;
+.news p,
+.the-hole p {
+  margin-bottom: 1em;
+  line-height: 1.2em
 }
 
 /*Свойства подвала*/
