--- a/goitfe5homeworks/html/module_4_css_2/css/style.css
+++ b/goitfe5homeworks/html/module_4_css_2/css/style.css
@@ -105,7 +105,7 @@ body {
   top: 31px;
   left: 20px;
   width: 150px;
-  padding-bottom: 12px;
+  padding-bottom: 10px;
   background-color: #343434;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
      -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
@@ -115,7 +115,7 @@ body {
   display: block;
 }
 .submenu li a {
-  padding: 10px;
+  padding: 5px 10px;
   color: #fff;
   text-align: left;
   text-decoration: none;
