--- a/goitfe5homeworks/html/module_5_2/css/style.css
+++ b/goitfe5homeworks/html/module_5_2/css/style.css
@@ -3,17 +3,23 @@
 body {
   background-color: white;
 }
-table {
+div {
   margin: 10vh auto;
+  height: 536px;
+  width: 500px;
+  overflow: hidden;
+}
+table {
+  position: relative;;
+  bottom: 10px;
+  right: 10px;
   height: 560px;
   width: 520px;
   background-color: white;
-  color: green;
 }
 td {
   border: 10px solid black;
 }
-
 /*Настройка размеров*/
 
 .row1 {
