--- a/goitfe5homeworks/html/module_5_2/css/style.css
+++ b/goitfe5homeworks/html/module_5_2/css/style.css
@@ -3,23 +3,21 @@
 body {
   background-color: white;
 }
-div {
-  margin: 10vh auto;
-  height: 536px;
-  width: 500px;
-  overflow: hidden;
-}
 table {
-  position: relative;;
-  bottom: 10px;
-  right: 10px;
+  margin: auto;;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  clip: rect(10px, 510px, 547px, 10px);
   height: 560px;
   width: 520px;
-  background-color: white;
 }
 td {
   border: 10px solid black;
 }
+
 /*Настройка размеров*/
 
 .row1 {
