--- a/goitfe5homeworks/html/module_5_2/css/style.css
+++ b/goitfe5homeworks/html/module_5_2/css/style.css
@@ -12,6 +12,7 @@ table {
   clip: rect(10px, 510px, 547px, 10px);
   height: 560px;
   width: 520px;
+  background-color: white;
 }
 td {
   border: 10px solid black;
