--- a/goitfe5homeworks/html/module_5_2/css/style.css
+++ b/goitfe5homeworks/html/module_5_2/css/style.css
@@ -4,15 +4,13 @@ body {
   background-color: #dee3ec;
 }
 table {
-  position: absolute;
-  margin: auto;
-  top: 5%;
-  left: 0;
-  right: 0;
-  clip: rect(10px, 510px, 547px, 10px);
-  height: 560px;
-  width: 520px;
+  margin: 10vh auto;
+  border-spacing: 0;
+  border: 11px solid white;
   background-color: white;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
+     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
+          box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
 }
 td {
   border: 10px solid black;
