--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -58,7 +58,9 @@ nav {
   background-color: #4eabda;
   text-shadow: 0 0 7px rgba(255,255,255,.95);/*Использовал это свойство, так как жирный текст менят ширину кнопки*/
 }
-
+.underline {
+  text-decoration: underline;
+}
 
 .wrapper {
   height: 100vh;
