--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -1,7 +1,7 @@
 html,
 body {
   min-height: 100%;/*Позволяет растянуть фон*/
-  overflow-y: hidden;/*Убирает вертикальную полосу прокрутки*/
+  /*overflow-y: hidden;/*Убирает вертикальную полосу прокрутки*/*/
 }
 body {
   font-family: Tahoma, sans-serif;
@@ -66,7 +66,8 @@ nav {
   height: 100vh;
   background-image: url(../img/background.jpg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center 34px;
+  background-size: cover;
 }
 
 
