--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -61,10 +61,7 @@ nav {
 .first-menu::after {
   content: "";
   float: right;
-  line-height: 34px;
-  margin-left: 10px;
-  margin-top: 2px;
-  width: 0;
+  margin: 2px 10px;
   height: 30px;
   border-left: 1px solid #4eabda;
 }
