Homework #5-1 Menu Bar Creation

--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -37,7 +37,8 @@ nav {
 .second-menu li {
   display: inline-block;
 }
-.first-menu li a, .second-menu li a {
+.first-menu li a,
+.second-menu li a {
   display: block;
   text-decoration: none;
   font-size: 14px;
@@ -56,10 +57,16 @@ nav {
   text-shadow: 0 0 7px rgba(255, 255, 255, .95);
   /*Использовал это свойство, так как жирный текст менят ширину кнопки*/
 }
+.second-menu li a:hover {
+  background: linear-gradient(to bottom, #50afdc, #2e7ac4);
+  padding: 9px 13px;
+  border: 1px solid #5aa4de;
+  border-radius: 1px;
+}
 .first-menu::after {
   content: "";
   float: right;
-  margin: 2px 10px;
+  margin: 2px 3px 2px 10px;
   height: 30px;
   border-left: 1px solid #4eabda;
 }
@@ -68,7 +75,7 @@ nav {
   position: relative;
   bottom: 4px;
   background: url(../img/Inventicons.png) no-repeat top right;
-  background-size: contain;
+  background-size: cover;
   margin-right: 10px;
   float: left;
   height: 24px;
