--- a/goitfe5homeworks/html/module_5_1/css/style.css
+++ b/goitfe5homeworks/html/module_5_1/css/style.css
@@ -119,6 +119,7 @@ section {
 .forma input {
   height: 35px;
   width: 275px;
+  color: #fff;
   margin-bottom: 16px;
   padding-left: 18px;
   outline: none;
@@ -128,8 +129,15 @@ section {
   border-bottom: 1px solid #484746;
   background-color: #111;
 }
-.forma input:hover {
+.forma input:focus {
+  border-top: 1px solid #1d4c7c;
+  border-right: 1px solid #1d4c7c;
+  border-left: 1px solid #1d4c7c;
   border-bottom: 1px solid #689bcc;
+  -webkit-box-shadow: 0 0 10px 0 rgba(47,123,197,1), inset 0 0 10px 0 rgba(0,0,0,0.5);
+     -moz-box-shadow: 0 0 10px 0 rgba(47,123,197,1), inset 0 0 10px 0 rgba(0,0,0,0.5);
+          box-shadow: 0 0 10px 0 rgba(47,123,197,1), inset 0 0 10px 0 rgba(0,0,0,0.5);
+  background-color: #1b5288;
 }
 
 /*Свойства placeholder*/
